--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 /* Font Link */
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Encode+Sans+Condensed|Encode+Sans+Semi+Expanded');
+/* @import url('https://fonts.googleapis.com/css?family=Open+Sans|Encode+Sans+Condensed|Encode+Sans+Semi+Expanded'); */
+@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700,900');
 /* End Font Link */
 
 @font-face {
@@ -17,7 +18,8 @@
 }
 body {
     /* font-family: 'museosansrounded-500'; */
-    font-family: 'Encode Sans Semi Expanded';
+    font-family: 'Nunito Sans';
+    font-weight: 600;
     /* color: #323232; */
     font-size: 15px;
 }
